<resources>
    <string name="app_name">Calculator++</string>
    <string name="B">"\u2190"</string>
    <string name="C">C</string>
    <string name="Decimal">.</string>
    <string name="Equals">=</string>
    <string name="Percentage">%</string>
    <string name="Divide">"\u00f7"</string>
    <string name="Multiply">"\u00d7"</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="zero_view">0.0</string>
</resources>

