<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:padding="10sp"
            android:paddingTop="5sp"
            android:text="@string/zero_view"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#f0f0f0"
            android:textSize="70sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:cursorVisible="false"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:inputType="none"
            android:textAlignment="viewEnd"
            android:textColor="#f0f0f0"
            android:textSize="65sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textIsSelectable="true"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:columnCount="4"
        android:elevation="2sp"
        android:rowCount="5">
        <!-- Column = 0 -->
        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:onClick="clear"
            android:text="@string/C"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/number_border_7"
            android:onClick="seven"
            android:text="@string/seven"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="four"
            android:text="@string/four"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="one"
            android:text="@string/one"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:background="@android:color/transparent"
            android:onClick="dis"
            android:text="@string/Decimal"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
        <!-- Column = 1 -->
        <Button
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:background="@android:color/transparent"
            android:onClick="back"
            android:text="@string/B"
            android:textAlignment="center"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="eight"
            android:text="@string/eight"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="five"
            android:text="@string/five"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="two"
            android:text="@string/two"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="zero"
            android:text="@string/zero"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold" />
        <!-- Column = 2 -->
        <Button
            android:id="@+id/per"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-condensed"
            android:onClick="per"
            android:text="@string/Percentage"
            android:textColor="#f0f0f0"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="nine"
            android:text="@string/nine"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="six"
            android:text="@string/six"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/number_border_7"
            android:onClick="three"
            android:text="@string/three"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/div"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-condensed"
            android:onClick="div"
            android:text="@string/Divide"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <!-- Column = 3 -->
        <Button
            android:id="@+id/mul"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:onClick="mul"
            android:text="@string/Multiply"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/sub"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:background="@android:color/transparent"
            android:onClick="sub"
            android:text="@string/Minus"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <Button
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:background="@android:color/transparent"
            android:onClick="sum"
            android:text="@string/Plus"
            android:textColor="#f0f0f0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/equal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:layout_margin="2sp"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:background="@color/colorAccent"
            android:elevation="2sp"
            android:onClick="equal"
            android:text="@string/Equals"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

    </GridLayout>

</LinearLayout>
